--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
+<!DOCTYPE HTML>
+   <html>
+          <head>
+                  <meta charset="utf-8">
+                  <title>Hello, World!</title>
+          </head>
 <body>
-$END$
-</body>
+<p> Hello! My name is Noah Nagel. I am a senior physics major at <a href= https://www.oxy.edu>Occidental College</a> graduating in May 2022.  </p>
+          </body>
 </html>
